[gd_scene load_steps=25 format=3 uid="uid://ce0cslus5mqjn"]

[ext_resource type="PackedScene" uid="uid://lff5yob7g21k" path="res://Player/Player.tscn" id="1"]
[ext_resource type="Texture2D" uid="uid://b72lfco6hnnbt" path="res://Textures/Background/BG loop 1.png" id="1_jcyqe"]
[ext_resource type="Script" path="res://Levels/Scripts/LevelManager.gd" id="1_x75k1"]
[ext_resource type="Script" path="res://Enemy Manager/Scripts/WaveConfig.gd" id="2_2hkqn"]
[ext_resource type="Shader" path="res://MainScenes/Background.gdshader" id="3_l63sq"]
[ext_resource type="PackedScene" uid="uid://ci2dx8vxi2rne" path="res://Spawner/Spawner.tscn" id="4"]
[ext_resource type="PackedScene" uid="uid://s66mklagl4fy" path="res://HUD/HUD.tscn" id="5"]
[ext_resource type="Script" path="res://Camera/ShakeCam.gd" id="6"]
[ext_resource type="Texture2D" uid="uid://dcdgypyoyws7" path="res://Textures/UI/pause_icon.png" id="6_wpk6a"]
[ext_resource type="PackedScene" uid="uid://bog23u7rvkoy" path="res://MainScenes/pause_menu.tscn" id="7_c1kre"]
[ext_resource type="PackedScene" uid="uid://c6uejmh8c7koe" path="res://MainScenes/game_over_screen.tscn" id="8_uq0sc"]
[ext_resource type="PackedScene" uid="uid://b2dr1w4bni0qf" path="res://MainScenes/level_completed.tscn" id="13_23710"]
[ext_resource type="PackedScene" uid="uid://ch5yid0u7nwuh" path="res://Enemy Manager/wave_manager.tscn" id="13_nmwl1"]
[ext_resource type="AudioStream" uid="uid://dpnvp4i23xweo" path="res://Textures/Music/GameSong (mp3cut.net).mp3" id="15_c7pbv"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_d18cs"]
shader = ExtResource("3_l63sq")
shader_parameter/direction = Vector2(0, -1.5)
shader_parameter/speed_scale = 0.1

[sub_resource type="Resource" id="Resource_5nt20"]
script = ExtResource("2_2hkqn")
formation_type = 7
entry_pattern = 6
difficulty = 1
enemy_type = "SlowShooter"
enemy_density = "Maximum"
formation_center = Vector2(640, 300)
formation_radius = 150.0
formation_spacing = 150.0
spawn_delay = 0.3
entry_speed = 300.0

[sub_resource type="Resource" id="Resource_nv5vc"]
script = ExtResource("2_2hkqn")
formation_type = 6
entry_pattern = 7
difficulty = 3
enemy_type = "FastEnemy"
enemy_density = "Maximum"
formation_center = Vector2(640, 300)
formation_radius = 150.0
formation_spacing = 80.0
spawn_delay = 0.3
entry_speed = 300.0

[sub_resource type="Resource" id="Resource_0l8a1"]
script = ExtResource("2_2hkqn")
formation_type = 5
entry_pattern = 5
difficulty = 3
enemy_type = "BouncerEnemy"
enemy_density = "Maximum"
formation_center = Vector2(640, 300)
formation_radius = 150.0
formation_spacing = 80.0
spawn_delay = 0.3
entry_speed = 300.0

[sub_resource type="Resource" id="Resource_51jnw"]
script = ExtResource("2_2hkqn")
formation_type = 4
entry_pattern = 4
difficulty = 1
enemy_type = "mob1"
enemy_density = "Dense"
formation_center = Vector2(640, 300)
formation_radius = 150.0
formation_spacing = 80.0
spawn_delay = 0.3
entry_speed = 300.0

[sub_resource type="Resource" id="Resource_deoyo"]
script = ExtResource("2_2hkqn")
formation_type = 0
entry_pattern = 3
difficulty = 2
enemy_type = "SlowShooter"
enemy_density = "Maximum"
formation_center = Vector2(640, 300)
formation_radius = 150.0
formation_spacing = 80.0
spawn_delay = 0.3
entry_speed = 300.0

[sub_resource type="Animation" id="Animation_3nbtk"]
resource_name = "Player_sweep"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.533333, 1),
"transitions": PackedFloat32Array(1, 1.07177, 1),
"update": 0,
"values": [Vector2(539, 2142), Vector2(560, 1357), Vector2(597, -373)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Player:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.533333, 1),
"transitions": PackedFloat32Array(5.46416, 1.07177, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.72928, 2.76234), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_qw32v"]
resource_name = "fade_in"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/PauseMenu:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 0.533333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_kg2kq"]
resource_name = "fade_out"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/PauseMenu:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ymc22"]
_data = {
"Player_sweep": SubResource("Animation_3nbtk"),
"fade_in": SubResource("Animation_qw32v"),
"fade_out": SubResource("Animation_kg2kq")
}

[node name="Level_1" type="Node"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HUD" parent="CanvasLayer" instance=ExtResource("5")]
offset_left = -3.0
offset_top = 54.0
offset_right = -3.0
offset_bottom = 54.0

[node name="ParallaxBackground" type="ParallaxBackground" parent="CanvasLayer"]

[node name="ParallaxLayer" type="ParallaxLayer" parent="CanvasLayer/ParallaxBackground"]

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/ParallaxBackground/ParallaxLayer"]
material = SubResource("ShaderMaterial_d18cs")
position = Vector2(-427, -154)
scale = Vector2(1.84688, 4.03472)
texture = ExtResource("1_jcyqe")
centered = false
flip_h = true
region_rect = Rect2(1.95564, -32.485, 1275.34, 770.342)

[node name="GameOverScreen" parent="CanvasLayer" instance=ExtResource("8_uq0sc")]

[node name="Pause" type="Button" parent="CanvasLayer" groups=["UI"]]
anchors_preset = -1
anchor_left = 0.877778
anchor_top = 0.0104167
anchor_right = 0.977778
anchor_bottom = 0.0554167
offset_left = -5.00024
offset_top = 31.9999
offset_right = -41.0002
offset_bottom = -4.00008
grow_horizontal = 0
scale = Vector2(1.5, 1.5)
toggle_mode = true
button_pressed = true
icon = ExtResource("6_wpk6a")
flat = true
metadata/_edit_use_anchors_ = true

[node name="PauseMenu" parent="CanvasLayer" instance=ExtResource("7_c1kre")]
modulate = Color(1, 1, 1, 0)

[node name="LevelCompleted" parent="CanvasLayer" instance=ExtResource("13_23710")]

[node name="Player" parent="." instance=ExtResource("1")]
position = Vector2(539, 2142)

[node name="Cam" type="Camera2D" parent="."]
anchor_mode = 0
script = ExtResource("6")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="." groups=["BackgroundMusic"]]
process_mode = 3
stream = ExtResource("15_c7pbv")
volume_db = 10.0
autoplay = true
bus = &"Background"
parameters/looping = true

[node name="Spawner" parent="." instance=ExtResource("4")]
position = Vector2(673, 19)

[node name="LevelManager" type="Node2D" parent="." groups=["LevelManager"]]
script = ExtResource("1_x75k1")
waves = Array[ExtResource("2_2hkqn")]([SubResource("Resource_5nt20"), SubResource("Resource_nv5vc"), SubResource("Resource_0l8a1"), SubResource("Resource_51jnw"), SubResource("Resource_deoyo")])

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
process_mode = 3
libraries = {
"": SubResource("AnimationLibrary_ymc22")
}

[node name="WaveManager" parent="." instance=ExtResource("13_nmwl1")]

[connection signal="pressed" from="CanvasLayer/Pause" to="LevelManager" method="_on_pause_pressed"]
